# tic-tac-toe

./: CMakeLists.txt  Makefile  README.md
src/: main.c
